force-app/main/default/objects/Order/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <formula>IF( ISBLANK(Bill_To__r.Name),&apos;&apos;,Bill_To__r.Name+&quot;, &quot;)+IF( ISBLANK(Bill_To__r.ShippingStreet ),&apos;&apos;,Bill_To__r.ShippingStreet +&quot;, &quot;)+IF( ISBLANK(Bill_To__r.ShippingCity),&apos;&apos;,Bill_To__r.ShippingCity+&quot;, &quot;)+IF( ISBLANK(Bill_To__r.ShippingState ),&apos;&apos;,Bill_To__r.ShippingState +&quot;, &quot;)+IF( ISBLANK(Bill_To__r.ShippingPostalCode),&apos;&apos;,Bill_To__r.ShippingPostalCode+&quot;, &quot;)+IF( ISBLANK(Bill_To__r.ShippingCountry),&apos;&apos;,Bill_To__r.ShippingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Address</label>
    <type>Text</type>
</CustomField>