force-app/main/default/objects/Order/fields/Bill_To_Details__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Details__c</fullName>
    <label>Bill To Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>