force-app/main/default/objects/Order/fields/BillToNo__c.field-meta.xml
<CustomField>
    <fullName>BillToNo__c</fullName>
    <label>BillToNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>