force-app/main/default/objects/Order/fields/Chemical_GSAP_P_31__c.field-meta.xml
<CustomField>
    <fullName>Chemical_GSAP_P_31__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chemical GSAP P-31</label>
    <type>Checkbox</type>
</CustomField>