force-app/main/default/objects/Order/fields/GSAP_Status__c.field-meta.xml
<CustomField>
    <fullName>GSAP_Status__c</fullName>
    <label>GSAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Queue</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed to Process</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Resent</fullName>
            </value>
            <value>
                <fullName>No GSAP Response</fullName>
            </value>
            <value>
                <fullName>Stuck in Queue</fullName>
            </value>
            <value>
                <fullName>Sent Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>