force-app/main/default/objects/Order/fields/Is_Combination_load__c.field-meta.xml
<CustomField>
    <fullName>Is_Combination_load__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will hold whether the user has selected Combination load (yes or no) while creating a new Order.</description>
    <label>Is Combination load</label>
    <type>Checkbox</type>
</CustomField>