force-app/main/default/objects/Order/fields/Is_Order_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Order_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Order Confirmed?</label>
    <type>Checkbox</type>
</CustomField>