force-app/main/default/objects/Order/fields/Last_Minute_Changes__c.field-meta.xml
<CustomField>
    <fullName>Last_Minute_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Minute Changes</label>
    <type>Checkbox</type>
</CustomField>