force-app/main/default/objects/Order/fields/Late_Order__c.field-meta.xml
<CustomField>
    <fullName>Late_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Order</label>
    <type>Checkbox</type>
</CustomField>