force-app/main/default/objects/Order/fields/Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Transport__c</fullName>
    <label>Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk tanker</fullName>
            </value>
            <value>
                <fullName>Rail Tank Car</fullName>
            </value>
            <value>
                <fullName>Road Tank Truck</fullName>
            </value>
            <value>
                <fullName>Road IM Portable Tnk</fullName>
            </value>
            <value>
                <fullName>Road (Bulk)  / Rail</fullName>
            </value>
            <value>
                <fullName>Road(Bulk)/Short Sea</fullName>
            </value>
            <value>
                <fullName>Inland water-transpt</fullName>
            </value>
            <value>
                <fullName>Bulk Cont. road/sea</fullName>
            </value>
            <value>
                <fullName>No transport</fullName>
            </value>
            <value>
                <fullName>Pack Cont. road/sea</fullName>
            </value>
            <value>
                <fullName>Rail Hopper Car</fullName>
            </value>
            <value>
                <fullName>Road Hopper Truck</fullName>
            </value>
            <value>
                <fullName>Road Package Truck</fullName>
            </value>
            <value>
                <fullName>Road Package Trk.LTL</fullName>
            </value>
            <value>
                <fullName>Road (Bulk) / Barge</fullName>
            </value>
            <value>
                <fullName>Road(Pack)/Short Sea</fullName>
            </value>
            <value>
                <fullName>Air-transport</fullName>
            </value>
            <value>
                <fullName>Pipeline-transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>