force-app/main/default/objects/Order/fields/Order_Other_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Order_Other_Instructions__c</fullName>
    <label>Order Other Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>