force-app/main/default/objects/Order/fields/Order_Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipping_Condition__c</fullName>
    <label>Order Shipping Condition</label>
    <length>2</length>
    <type>Text</type>
</CustomField>