force-app/main/default/objects/Order/fields/Payer_Details__c.field-meta.xml
<CustomField>
    <fullName>Payer_Details__c</fullName>
    <label>Payer Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>