force-app/main/default/objects/Order/fields/PayerNo__c.field-meta.xml
<CustomField>
    <fullName>PayerNo__c</fullName>
    <label>PayerNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>