force-app/main/default/objects/Order/fields/Reviewed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Date_Time__c</fullName>
    <label>Reviewed Date/Time</label>
    <type>DateTime</type>
</CustomField>