force-app/main/default/objects/Order/fields/Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Number__c</fullName>
    <description>track Sales Order Number from Chemical GSAP and 3rd Party</description>
    <label>Sales Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>