force-app/main/default/objects/Order/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Ship To)</relationshipLabel>
    <relationshipName>Ship_To_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>