force-app/main/default/objects/Order/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <formula>IF( ISBLANK(Ship_To__r.Name),&apos;&apos;,Ship_To__r.Name+&quot;, &quot;)+IF( ISBLANK(Ship_To__r.ShippingStreet ),&apos;&apos;,Ship_To__r.ShippingStreet +&quot;, &quot;)+IF( ISBLANK(Ship_To__r.ShippingCity),&apos;&apos;,Ship_To__r.ShippingCity+&quot;, &quot;)+IF( ISBLANK(Ship_To__r.ShippingState ),&apos;&apos;,Ship_To__r.ShippingState +&quot;, &quot;)+IF( ISBLANK(Ship_To__r.ShippingPostalCode),&apos;&apos;,Ship_To__r.ShippingPostalCode+&quot;, &quot;)+IF( ISBLANK(Ship_To__r.ShippingCountry),&apos;&apos;,Ship_To__r.ShippingCountry)</formula>
    <label>Ship To Address</label>
    <type>Text</type>
</CustomField>