force-app/main/default/objects/Order/fields/Ship_To_Details__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Details__c</fullName>
    <label>Ship To Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>