force-app/main/default/objects/Order/fields/ShipToNo__c.field-meta.xml
<CustomField>
    <fullName>ShipToNo__c</fullName>
    <label>ShipToNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>