force-app/main/default/objects/Order/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Sold To)</relationshipLabel>
    <relationshipName>Sold_To_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>