force-app/main/default/objects/Order/fields/Sold_To_Details__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Details__c</fullName>
    <label>Sold To Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>