force-app/main/default/objects/Order/fields/TCP_Bulk_Order_Requested_by__c.field-meta.xml
<CustomField>
    <fullName>TCP_Bulk_Order_Requested_by__c</fullName>
    <description>To contain the contact id of the user while creating bulk order.</description>
    <label>Bulk Order Requested by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>