force-app/main/default/objects/Order/fields/TCP_Cancellation_Placed_By__c.field-meta.xml
<CustomField>
    <fullName>TCP_Cancellation_Placed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture the user who placed the cancellation request (Commops or End User)</description>
    <inlineHelpText>To capture the user who placed the cancellation request (Commops or End User)</inlineHelpText>
    <label>Cancellation Placed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TCP_CancellationPlaced</relationshipName>
    <type>Lookup</type>
</CustomField>