force-app/main/default/objects/Order/fields/TCP_Cancellation_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>TCP_Cancellation_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To identify the user who placed whole order cancellation, which can be approved/rejected by commops</description>
    <inlineHelpText>To identify the user who placed whole order cancellation, which can be approved/rejected by commops</inlineHelpText>
    <label>Cancellation Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Cancellation_Placed</relationshipName>
    <type>Lookup</type>
</CustomField>