force-app/main/default/objects/Order/fields/TCP_Cancellation_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>TCP_Cancellation_Requested_Date__c</fullName>
    <description>To capture latest cancellation requested date.</description>
    <inlineHelpText>Cancellation Requested Date</inlineHelpText>
    <label>Cancellation Requested Date</label>
    <type>Date</type>
</CustomField>