force-app/main/default/objects/Order/fields/tcp_email_alert_sent__c.field-meta.xml
<CustomField>
    <fullName>tcp_email_alert_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email alert sent</label>
    <type>Checkbox</type>
</CustomField>