force-app/main/default/objects/Order/fields/TCP_GSAP_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TCP_GSAP_Account_Name__c</fullName>
    <description>To capture TCP GSAP Account Name of the sold to selected while fresh order approval.</description>
    <inlineHelpText>To capture TCP GSAP Account Name of the sold to selected while fresh order approval.</inlineHelpText>
    <label>TCP GSAP Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>