force-app/main/default/objects/Order/fields/TCP_GSAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>TCP_GSAP_Account_Number__c</fullName>
    <description>To capture GSAP Sold To number set during fresh order approval.</description>
    <inlineHelpText>To capture GSAP Sold To number set during fresh order approval.</inlineHelpText>
    <label>TCP GSAP Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>