force-app/main/default/objects/Order/fields/TCP_Latest_Approved_Modify_Cancel__c.field-meta.xml
<CustomField>
    <fullName>TCP_Latest_Approved_Modify_Cancel__c</fullName>
    <description>To capture the Latest Approved Modify/Cancel Request.</description>
    <inlineHelpText>To capture the Latest Approved Modify/Cancel Request.</inlineHelpText>
    <label>Latest Approved Modify/Cancel Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>