force-app/main/default/objects/Order/fields/TCP_Modification_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>TCP_Modification_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To capture who placed the latest modification request.</description>
    <inlineHelpText>To capture who placed the latest modification request.</inlineHelpText>
    <label>Modification Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Modifications_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>