force-app/main/default/objects/Order/fields/TCP_Modification_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>TCP_Modification_Requested_Date__c</fullName>
    <description>To capture the date when the latest modification was placed.</description>
    <inlineHelpText>To capture the date when the latest modification was placed.</inlineHelpText>
    <label>Modification Requested Date</label>
    <type>Date</type>
</CustomField>