force-app/main/default/objects/Order/fields/TCP_Modify_Cancel_Remarks__c.field-meta.xml
<CustomField>
    <fullName>TCP_Modify_Cancel_Remarks__c</fullName>
    <description>To Capture Modify/Cancel Remarks</description>
    <inlineHelpText>To Capture Modify/Cancel Remarks</inlineHelpText>
    <label>Modify/Cancel Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>