force-app/main/default/objects/Order/fields/TCP_System_BulkOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>TCP_System_BulkOrderNumber__c</fullName>
    <description>This field is used as part of development to save the bulk orders.</description>
    <label>System Bulk Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>