force-app/main/default/objects/Order/recordTypes/TCP_Orders.recordType-meta.xml
<RecordType>
    <fullName>TCP_Orders</fullName>
    <active>true</active>
    <description>This record type will be used for Trading customer portal</description>
    <label>TCP Orders</label>
</RecordType>